# zed-no-nonsense

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
crates/activity_indicator/: Cargo.toml
crates/askpass/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update/src/: auto_update.rs
crates/auto_update_ui/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: test.rs  user.rs
crates/command_palette/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/src/: code_context_menus.rs  editor.rs
crates/eval/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension/src/: extension.rs  extension_builder.rs  extension_host_proxy.rs  extension_manifest.rs  types.rs
crates/extension_api/src/: extension_api.rs
crates/extension_api/wit/since_v0.6.0/: extension.wit  settings.rs
crates/extension_cli/: Cargo.toml
crates/extension_cli/src/: main.rs
crates/extension_host/: Cargo.toml
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_host/src/: capability_granter.rs  extension_host.rs  extension_store_test.rs  headless_host.rs  wasm_host.rs
crates/extension_host/src/wasm_host/: wit.rs
crates/extension_host/src/wasm_host/wit/: since_v0_5_0.rs  since_v0_6_0.rs
crates/extensions_ui/: Cargo.toml
crates/extensions_ui/src/: extensions_ui.rs
crates/fs/: Cargo.toml
crates/fs/src/: fake_git_repo.rs  fs.rs
crates/git/: Cargo.toml
crates/git/src/: hosting_provider.rs  hosting_providers.rs  repository.rs
crates/git_hosting_providers/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/gpui/: Cargo.toml
crates/gpui/src/: app.rs  asset_cache.rs  gpui.rs  platform.rs
crates/gpui/src/app/: test_context.rs
crates/gpui/src/elements/: img.rs
crates/gpui/src/platform/: linux.rs  windows.rs
crates/gpui/src/platform/linux/: platform.rs
crates/gpui/src/platform/linux/wayland/: client.rs
crates/gpui/src/platform/linux/x11/: client.rs
crates/gpui/src/platform/test/: platform.rs
crates/json_schema_store/: Cargo.toml
crates/json_schema_store/src/: json_schema_store.rs
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language/src/: buffer.rs  buffer_tests.rs  language.rs
crates/language_onboarding/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/markdown/: Cargo.toml
crates/node_runtime/: Cargo.toml
crates/node_runtime/src/: node_runtime.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: notification_store.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: onboarding.rs
crates/open_router/: Cargo.toml
crates/paths/src/: paths.rs
crates/prettier/: Cargo.toml
crates/prettier/src/: prettier.rs
crates/project/: Cargo.toml
crates/project/src/: buffer_store.rs  git_store.rs  project.rs  project_settings.rs  project_tests.rs  worktree_store.rs
crates/project_panel/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/recent_projects/src/: recent_projects.rs
crates/repl/: Cargo.toml
crates/search/: Cargo.toml
crates/settings/src/: vscode_import.rs
crates/settings_json/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/storybook/: Cargo.toml
crates/system_specs/src/: system_specs.rs
crates/task/: Cargo.toml
crates/task/src/: debug_format.rs  task.rs
crates/terminal_view/: Cargo.toml
crates/text/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/util/src/: paths.rs
crates/util_macros/: Cargo.toml
crates/vim/: Cargo.toml
crates/workspace/: Cargo.toml
crates/workspace/src/: workspace.rs
crates/worktree/: Cargo.toml
crates/worktree/src/: worktree.rs  worktree_tests.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  reliability.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  open_listener.rs
crates/zed_actions/src/: lib.rs
